2011-07-13  theron	<theron@netcitadel.com>
	* Fixed #2505: make sure that objects that we show are members of
	a dynamic group are actually objects.  Previously we were showing
	stuff like FirewallOptions objects.  To make sure that dynamic
	group expansion is done the same way in the UI and for the
	compiler, also fixed #2502 (consolidate logic for DynamicGroup).

	* Modified checks (added for #2514) for empty path in an Address
	Table object.  It's valid to have an empty path for the situation
	where a user wants to use an ipset in place of the table.
	However, if there is a path and it comes out blank in
	getSourceNameAsPath() then that means %DATADIR% expansion failed.

	* Fixed #2440.  Now when a firewall is matched in the quick
	filter, all child elements (e.g. policies, interfaces) will be
	displayed as well.

	* Fixed #2523: save the expanded/collapsed state of the tree when
	the user starts typing something into the quick filter.  When the
	quick filter is cleared, re-expand any items that started off
	expanded (so we get the union of expanded items displayed by quick
	filter plus what the user started with expanded).

	* Tried to fix #2507: set a size for the "type" column in the
	dynamic group dialog (on some platforms it comes out so narrow you
	can't see it, despite it having ResizeToContents).

2011-07-11  theron	<theron@netcitadel.com>
	* Implemented #2514, support for address table alternate paths.
	There's a "data directory" setting under user preferences.  If the
	user selects an address table file using "choose file" and that
	file is "inside" the data directory, then the appropriate part of
	the path is replaced with %DATADIR% as a variable.  If the address
	table is marked "run-time" then the path is taken from the
	firewall data directory option.

2011-07-11  Vadim Kurland  <vadim@netcitadel.com>

	* TableFactory.cpp (createTablesForRE): see #2513 "Group and
	Address Table name persistence in generated config". Compiler for